...
                Text(text = "Login", style = MaterialTheme.typography.bodyMedium,
                    modifier = Modifier.clickable {
                        // Navegar a LoginActivity usando un Intent

                        val intent = Intent(context, MainActivity::class.java)
                        context.startActivity(intent)
                    }.testTag("loginButtonRegister")
                )
            }
        }
    }


...
